[gd_scene load_steps=2 format=2]

[ext_resource path="res://EnemySpawner.gd" type="Script" id=1]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnPosition" type="Node2D" parent="."]

[node name="Spawn1" type="Position2D" parent="SpawnPosition"]
position = Vector2( 50, 0 )

[node name="Spawn2" type="Position2D" parent="SpawnPosition"]
position = Vector2( 150, 0 )

[node name="Spawn3" type="Position2D" parent="SpawnPosition"]
position = Vector2( 250, 0 )

[node name="Spawn4" type="Position2D" parent="SpawnPosition"]
position = Vector2( 350, 0 )

[node name="Spawn5" type="Position2D" parent="SpawnPosition"]
position = Vector2( 450, 0 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="add_score" from="." to="." method="_on_EnemySpawner_add_score"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
